# txt-editor

./: CMakeLists.txt  README.md  editor.cpp  txt.cpp  txt.h
tests/: CMakeLists.txt  txt-tests.cpp
